# InfiniteCanvasPOC

./: .dockerignore  .gitignore  ARCHITECTURE.md  BUGFIXES.md  CHANGELOG_ERASER.md  CMakeLists.txt  DOCKER_SETUP.md  Dockerfile  ELECTRON_INTEGRATION.md  ERASER_TOOL.md  FEATURES.md  FILE_SAVE_LOAD.md  LASSO_TOOL.md  LINE_WIDTH_GUIDE.md  NATIVE_FILE_DIALOGS.md  QUICKSTART.md  QUICKSTART_ELECTRON.md  README.md  README:md  Refining Tool Wheel UI.md  TRIANGLE_STRIPS.md  binding.gyp  build.sh  compose.yaml  docker-run.sh  drawing.mm  drawing.vsketch  example.vsketch  file  imgui.ini  package-lock.json  package.json  setup-imgui.sh
electron-demo/: README.md  imgui.ini  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
include/: BezierSmoother.h  Canvas.h  Stroke.h  StrokePoint.h  ToolWheel.h
src/: BezierSmoother.cpp  Canvas.cpp  Stroke.cpp  ToolWheel.cpp  VectorRenderer.cpp  main.cpp  node_addon.cpp
standalone-canvas-app/: CMakeLists.txt  README.md  build.sh  glfw  imgui  setup_dependencies.sh
standalone-canvas-app/include/: Stroke.h  VectorRenderer.h
standalone-canvas-app/src/: Canvas.cpp  Stroke.cpp  main.cpp
